--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,33 @@ on:
     branches: [ main ]
   push:
     branches: [ feat/** ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Detect Maven project
+        id: detect
+        run: |
+          if [ -f pom.xml ]; then
+            echo "has_maven=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_maven=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Skip (no Maven project yet)
+        if: steps.detect.outputs.has_maven == 'false'
+        run: echo "No pom.xml yet — skipping build."
+
       - name: Set up JDK
+        if: steps.detect.outputs.has_maven == 'true'
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '21'
-          cache: maven
+
       - name: Build & test
+        if: steps.detect.outputs.has_maven == 'true'
         run: mvn -B -DskipTests=false clean verify
