--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=aviation
 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.username=aviation_user
-spring.datasource.password=aviation_pass
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Use H2 in-memory database for local development
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# Enable H2 console for debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
