--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,5 @@
-server:
-  port: 8080
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/aviation
-    username: aviation
-    password: aviation
-  jpa:
-    hibernate:
-      ddl-auto: validate
+  application:
+    name: aviation
+  profiles:
+    active: dev
