--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=aviation
+#spring.application.name=aviation
 
 # Use H2 in-memory database for local development
 #spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
@@ -6,11 +6,10 @@ spring.application.name=aviation
 #spring.datasource.username=sa
 #spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-# Enable H2 console for debugging
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
